@@ -17,8 +17,7 @@
 
 package bisq.desktop.main.content.support.resources;
 
-import bisq.bisq_easy.NavigationTarget;
-import bisq.common.file.FileUtils;
+import bisq.common.file.FileMutatorUtils;
 import bisq.common.observable.Pin;
 import bisq.common.platform.PlatformUtils;
 import bisq.common.util.StringUtils;
@@ -30,32 +29,33 @@ import bisq.desktop.common.utils.FileChooserUtil;
 import bisq.desktop.common.view.Controller;
 import bisq.desktop.common.view.Navigation;
 import bisq.desktop.components.overlay.Popup;
+import bisq.desktop.navigation.NavigationTarget;
 import bisq.i18n.Res;
 import bisq.persistence.PersistenceService;
 import bisq.settings.SettingsService;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
-import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.text.SimpleDateFormat;
 import java.util.Date;
+import java.util.Set;
 
 @Slf4j
 public class ResourcesController implements Controller {
     @Getter
     private final ResourcesView view;
     private final ResourcesModel model;
-    private final String baseDir;
+    private final Path appDataDirPath;
     private final String appName;
     private final PersistenceService persistenceService;
     private final SettingsService settingsService;
     private Pin backupLocationPin;
 
     public ResourcesController(ServiceProvider serviceProvider) {
-        baseDir = serviceProvider.getConfig().getBaseDir().toAbsolutePath().toString();
+        appDataDirPath = serviceProvider.getConfig().getAppDataDirPath();
         appName = serviceProvider.getConfig().getAppName();
         settingsService = serviceProvider.getSettingsService();
         persistenceService = serviceProvider.getPersistenceService();
@@ -69,7 +69,7 @@ public class ResourcesController implements Controller {
         model.getBackupButtonDefault().bind(model.getBackupLocation().isEmpty().not());
         model.getBackupButtonDisabled().bind(model.getBackupLocation().isEmpty());
         backupLocationPin = FxBindings.bindBiDir(model.getBackupLocation())
-                .to(settingsService.getBackupLocation());
+                .to(settingsService.getBackupLocation(), settingsService::setBackupLocation);
 
     }
 
@@ -81,25 +81,25 @@ public class ResourcesController implements Controller {
     }
 
     void onOpenLogFile() {
-        PlatformUtils.open(Path.of(baseDir, "bisq.log").toFile());
+        PlatformUtils.open(appDataDirPath.resolve("bisq.log"));
     }
 
     void onOpenTorLogFile() {
-        PlatformUtils.open(Path.of(baseDir, "tor", "debug.log").toFile());
+        PlatformUtils.open(appDataDirPath.resolve("tor").resolve("debug.log"));
     }
 
     void onOpenDataDir() {
-        PlatformUtils.open(baseDir);
+        PlatformUtils.open(appDataDirPath);
     }
 
     void onSetBackupLocation() {
-        String path = model.getBackupLocation().get();
-        if (StringUtils.isEmpty(path)) {
-            path = PlatformUtils.getHomeDirectory();
-        }
+        String backupLocation = model.getBackupLocation().get();
+        Path path = StringUtils.isEmpty(backupLocation)
+                ? PlatformUtils.getHomeDirectoryPath()
+                : Path.of(backupLocation);
         String title = Res.get("support.resources.backup.selectLocation");
         FileChooserUtil.chooseDirectory(getView().getRoot().getScene(), path, title)
-                .ifPresent(directory -> model.getBackupLocation().set(directory.getAbsolutePath()));
+                .ifPresent(directory -> model.getBackupLocation().set(directory.toAbsolutePath().toString()));
     }
 
     void onBackup() {
@@ -112,14 +112,15 @@ public class ResourcesController implements Controller {
                     if (throwable == null) {
                         String dateString = new SimpleDateFormat("yyyy-MM-dd-HHmmss").format(new Date());
                         String destinationDirName = appName + "_backup_" + dateString;
-                        String destination = Paths.get(model.getBackupLocation().get(), destinationDirName).toString();
-                        if (!new File(model.getBackupLocation().get()).exists()) {
+                        Path destinationPath = Path.of(model.getBackupLocation().get(), destinationDirName);
+                        if (!Files.exists(Path.of(model.getBackupLocation().get()))) {
                             new Popup().warning(Res.get("support.resources.backup.destinationNotExist", model.getBackupLocation().get())).show();
                             return;
                         }
                         try {
-                            FileUtils.copyDirectory(baseDir, destination);
-                            new Popup().feedback(Res.get("support.resources.backup.success", destination)).show();
+                            // Files with .log extension are not necessary to include in the backup, so we exclude them from the copy
+                            FileMutatorUtils.copyDirectory(appDataDirPath, destinationPath, Set.of("log"));
+                            new Popup().feedback(Res.get("support.resources.backup.success", destinationPath)).show();
                         } catch (IOException e) {
                             new Popup().error(e).show();
                         }
