@@ -18,57 +18,74 @@
 package bisq.common.locale;
 
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Locale;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
+@Slf4j
 public class CountryRepository {
     @Getter
     private static Country defaultCountry;
+    private static final List<Country> ALL_COUNTRIES;
+    private static final List<String> ALL_COUNTRY_CODES;
 
     public static void setDefaultCountry(Country defaultCountry) {
         CountryRepository.defaultCountry = defaultCountry;
     }
 
     public static void applyDefaultLocale(Locale defaultLocale) {
-        CountryRepository.defaultCountry = findCountry(defaultLocale).orElse(findCountry(Locale.US).orElseThrow());
+        CountryRepository.defaultCountry = findCountry(defaultLocale).orElseGet(() -> findCountry(Locale.US).orElseThrow());
     }
 
     public static Optional<Country> findCountry(Locale locale) {
-        return countries.stream().filter(c -> c.getCode().equals(locale.getCountry())).findAny();
+        return ALL_COUNTRIES.stream().filter(c -> c.getCode().equals(locale.getCountry())).findAny();
     }
 
-    public static List<Country> getCountries() {
-        return countries;
+    public static List<Country> getAllCountries() {
+        return ALL_COUNTRIES;
     }
 
-    private static final List<Country> countries;
+    public static List<String> getAllCountyCodes() {
+        return ALL_COUNTRY_CODES;
+    }
 
     public static String getNameByCode(String countryCode) {
-        if (countryCode.equals("XK"))
+        if (countryCode.equals("XK")) {
             return "Republic of Kosovo";
-        else
-            return new Locale(LanguageRepository.getDefaultLanguage(), countryCode).getDisplayCountry();
+        } else {
+            return getLocalizedCountryDisplayString(countryCode);
+        }
     }
 
-    public static List<Country> getCountriesFromCodes(List<String> codes) {
-        List<Country> list = new ArrayList<>();
-        for (String code : codes) {
-            Locale locale = new Locale(LanguageRepository.getDefaultLanguage(), code, "");
-            String countryCode = locale.getCountry();
-            String regionCode = RegionRepository.getRegionCode(countryCode);
-            Region region = new Region(regionCode, RegionRepository.getRegionName(regionCode));
-            Country country = new Country(countryCode, locale.getDisplayCountry(), region);
-            if (countryCode.equals("XK")) {
-                country = new Country(countryCode, CountryRepository.getNameByCode(countryCode), region);
-            }
-            list.add(country);
+    public static String getLocalizedCountryDisplayString(String countryCode) {
+        return Locale.of("", countryCode).getDisplayCountry(LocaleRepository.getDefaultLocale());
+    }
+
+    public static Country getCountry(String countryCode) {
+        String regionCode = RegionRepository.getRegionCode(countryCode);
+        Region region = new Region(regionCode, RegionRepository.getRegionName(regionCode));
+
+        Country country = new Country(countryCode, getLocalizedCountryDisplayString(countryCode), region);
+        if (countryCode.equals("XK")) {
+            country = new Country(countryCode, CountryRepository.getNameByCode(countryCode), region);
         }
-        return list;
+        return country;
+    }
+
+    public static List<Country> getCountriesFromCodes(List<String> countryCodes) {
+        return countryCodes.stream()
+                .map(CountryRepository::getCountry)
+                .collect(Collectors.toList());
     }
 
     static {
-        countries = LocaleRepository.LOCALES.stream()
+        ALL_COUNTRIES = LocaleRepository.LOCALES.stream()
                 .map(locale -> {
                     String countryCode = locale.getCountry();
                     Region region = RegionRepository.getRegion(locale);
@@ -78,12 +95,23 @@ public class CountryRepository {
                     }
                     return country;
                 })
-                .collect(Collectors.toList());
-        countries.add(new Country("GE", "Georgia", new Region("AS", RegionRepository.getRegionName("AS"))));
-        countries.add(new Country("BW", "Botswana", new Region("AF", RegionRepository.getRegionName("AF"))));
-        countries.add(new Country("IR", "Iran", new Region("AS", RegionRepository.getRegionName("AS"))));
-        countries.sort(Comparator.comparing(Country::getName));
+                .sorted(Comparator.comparing(Country::getName))
+                .collect(Collectors.toUnmodifiableList());
+
+        ALL_COUNTRY_CODES = ALL_COUNTRIES.stream()
+                .map(Country::getCode)
+                .sorted()
+                .collect(Collectors.toUnmodifiableList());
     }
 
 
+    public static boolean matchesAllCountries(List<String> countryCodes) {
+        if (countryCodes.size() < ALL_COUNTRY_CODES.size()) {
+            return false;
+        }
+        // CountryCodes might be unmodifiable list, thus we create an ArrayList
+        List<String> sortedCountryCodes = new ArrayList<>(countryCodes);
+        Collections.sort(sortedCountryCodes);
+        return sortedCountryCodes.equals(ALL_COUNTRY_CODES);
+    }
 }
