@@ -19,6 +19,10 @@ package bisq.java_se.jvm;
 
 import bisq.common.formatter.DataSizeFormatter;
 import bisq.common.formatter.SimpleTimeFormatter;
+import bisq.common.observable.Observable;
+import bisq.common.observable.ReadOnlyObservable;
+import bisq.common.observable.map.ObservableHashMap;
+import bisq.common.observable.map.ReadOnlyObservableMap;
 import bisq.common.platform.MemoryReportService;
 import bisq.common.platform.OS;
 import bisq.common.timer.Scheduler;
@@ -27,18 +31,44 @@ import bisq.java_se.utils.ThreadProfiler;
 import com.sun.management.UnixOperatingSystemMXBean;
 import lombok.extern.slf4j.Slf4j;
 
+import javax.annotation.Nullable;
 import java.lang.management.ManagementFactory;
 import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 @Slf4j
 public class JvmMemoryReportService implements MemoryReportService {
+    private static final Set<String> JVM_THREAD_NAMES = Set.of("DestroyJavaVM",
+            "JavaFX-Launcher",
+            "JavaFX Application Thread",
+            "QuantumRenderer-0",
+            "JNA Cleaner",
+            "HTTP-Dispatcher",
+            "idle-timeout-task",
+            "InvokeLaterDispatcher",
+            "Prism Font Disposer",
+            "Java Sound Event Dispatcher",
+            "CompletableFutureDelayScheduler",
+            "InnocuousThreadGroup",
+            "PulseTimer-CVDisplayLink thread");
+    private static final Set<String> JVM_GROUP_NAMES = Set.of("system",
+            "InnocuousThreadGroup");
+
     private final int memoryReportIntervalSec;
     private final boolean includeThreadListInMemoryReport;
-    private Scheduler scheduler;
+    private final ObservableHashMap<String, ObservableHashMap<Long, AtomicInteger>> historicalNumThreadsByThreadName = new ObservableHashMap<>();
+    private final Observable<Integer> currentNumThreads = new Observable<>(0);
+    private final Observable<Integer> peakNumThreads = new Observable<>(0);
+    @Nullable
+    private Scheduler logReportScheduler, addStatisticsScheduler;
 
     public JvmMemoryReportService(int memoryReportIntervalSec, boolean includeThreadListInMemoryReport) {
         this.memoryReportIntervalSec = memoryReportIntervalSec;
@@ -47,19 +77,71 @@ public class JvmMemoryReportService implements MemoryReportService {
 
     @Override
     public CompletableFuture<Boolean> initialize() {
-        scheduler = Scheduler.run(this::logReport)
+        logReportScheduler = Scheduler.run(this::logReport)
                 .host(JvmMemoryReportService.class)
                 .runnableName("logReport")
-                .periodically(30, memoryReportIntervalSec, TimeUnit.SECONDS);
+                .periodically(90, memoryReportIntervalSec, TimeUnit.SECONDS);
+
+        addStatisticsScheduler = Scheduler.run(this::addPoolThreadsStatistics)
+                .host(JvmMemoryReportService.class)
+                .runnableName("addStatistics")
+                .periodically(0, NUM_POOL_THREADS_UPDATE_INTERVAL_SEC, TimeUnit.SECONDS);
+
         return CompletableFuture.completedFuture(true);
     }
 
     @Override
     public CompletableFuture<Boolean> shutdown() {
-        if (scheduler != null) {
-            scheduler.stop();
+        if (logReportScheduler != null) {
+            logReportScheduler.stop();
+            logReportScheduler = null;
+        }
+        if (addStatisticsScheduler != null) {
+            addStatisticsScheduler.stop();
+            addStatisticsScheduler = null;
         }
         return CompletableFuture.completedFuture(true);
+    }
+
+    // Tracks the number of pool threads at the given interval up to MAX_HISTORICAL_NUM_THREADS items per thread.
+    private void addPoolThreadsStatistics() {
+        int activeCount = Thread.activeCount();
+        currentNumThreads.set(activeCount);
+        peakNumThreads.set(Math.max(peakNumThreads.get(), activeCount));
+
+        Map<String, AtomicInteger> numPoolThreadsByThreadName = new HashMap<>();
+        Thread.getAllStackTraces().keySet().forEach(thread -> {
+            String threadName = thread.getName();
+            boolean isIndexedName = threadName.matches(".*-\\d+");
+            if (!isJvmThread(thread) && isIndexedName) {
+                // We use the patter with - and the thread ID for pools. As we are only interested in pool threads we filter for those.
+                String poolName = threadName.replaceAll("-\\d+", "");
+                numPoolThreadsByThreadName.computeIfAbsent(poolName, k -> new AtomicInteger())
+                        .incrementAndGet();
+            }
+        });
+        long now = System.currentTimeMillis();
+        numPoolThreadsByThreadName.forEach((poolName, numThreads) -> {
+            ObservableHashMap<Long, AtomicInteger> history = historicalNumThreadsByThreadName.computeIfAbsent(poolName, k -> new ObservableHashMap<>());
+            history.put(now, numThreads);
+        });
+
+        long cutOffDate = now - MAX_AGE_NUM_POOL_THREADS;
+        Set<String> poolNamesToRemove = new HashSet<>();
+        historicalNumThreadsByThreadName.forEach((key, history) -> {
+            Set<Long> timeStampsToRemove = history.keySet().stream().filter(timeStamp -> timeStamp <= cutOffDate).collect(Collectors.toSet());
+            timeStampsToRemove.forEach(history::remove);
+
+            if (history.isEmpty()) {
+                poolNamesToRemove.add(key);
+            }
+        });
+        poolNamesToRemove.forEach(historicalNumThreadsByThreadName::remove);
+
+        /*log.debug("historicalNumThreadsByThreadName " + historicalNumThreadsByThreadName.entrySet().stream()
+                .filter(e -> e.getKey().equals("Network.notify"))
+                .map(e -> e.getKey() + ":" + e.getValue())
+                .collect(Collectors.joining("\n")));*/
     }
 
     @Override
@@ -84,21 +166,23 @@ public class JvmMemoryReportService implements MemoryReportService {
             ThreadProfiler threadProfiler = ThreadProfiler.INSTANCE;
             int nameLength = 80;
             String format = "%-5s\t %-8s\t %-" + nameLength + "s\t %-15s\t %-15s\t %-15s\n";
-            String header = String.format(format, "ID", "Priority", "[Group] Name", "State", "Time", "Memory");
+            // Cumulative allocated memory. There is no API for the current memory per thread (requires heap dump or profiler).
+            // See: https://stackoverflow.com/questions/36176593/will-threadmxbeangetthreadallocatedbytes-return-size-of-allocated-memory-or-obj
+            String header = String.format(format, "ID", "Priority", "[Group] Name", "State", "Time", "Cumulative allocated memory");
 
             StringBuilder customBisqThreads = new StringBuilder("Bisq custom threads:\n");
             StringBuilder jvmThreads = new StringBuilder("\nJVM threads:\n");
             customBisqThreads.append(header);
             boolean showJvmThreads = true;
             Thread.getAllStackTraces().keySet().stream()
-                    .sorted(Comparator.comparing(Thread::getId))
+                    .sorted(Comparator.comparing(Thread::threadId))
                     .forEach(thread -> {
                         try {
                             ThreadGroup threadGroup = thread.getThreadGroup();
                             String groupName = threadGroup != null ? threadGroup.getName() : "N/A";
                             String threadName = thread.getName();
                             String fullName = StringUtils.truncate("[" + groupName + "] " + threadName, nameLength);
-                            long threadId = thread.getId();
+                            long threadId = thread.threadId();
                             Optional<Long> threadTime = Optional.empty();
                             try {
                                 threadTime = threadProfiler.getThreadTime(threadId);
@@ -125,19 +209,7 @@ public class JvmMemoryReportService implements MemoryReportService {
                                     time,
                                     memory
                             );
-                            Set<String> excludes = Set.of("DestroyJavaVM",
-                                    "JavaFX-Launcher",
-                                    "JavaFX Application Thread",
-                                    "QuantumRenderer-0",
-                                    "JNA Cleaner",
-                                    "HTTP-Dispatcher",
-                                    "idle-timeout-task",
-                                    "InvokeLaterDispatcher",
-                                    "Prism Font Disposer",
-                                    "Java Sound Event Dispatcher",
-                                    "CompletableFutureDelayScheduler",
-                                    "PulseTimer-CVDisplayLink thread");//
-                            if (groupName.equals("main") && priority <= 5 && !excludes.contains(threadName)) {
+                            if (!isJvmThread(thread)) {
                                 customBisqThreads.append(line);
                             } else if (showJvmThreads) {
                                 jvmThreads.append(line);
@@ -148,23 +220,23 @@ public class JvmMemoryReportService implements MemoryReportService {
                     });
 
             log.info("\n************************************************************************************************************************\n" +
-                            "Total memory: {}; Used memory: {}; Free memory: {}; Max memory: {}; No. of threads: {}\n" +
+                            "Used memory: {}; Free memory: {}; Total memory: {}; Max memory: {}; No. of threads: {}\n" +
                             "************************************************************************************************************************\n\n" +
                             "{}{}",
-                    StringUtils.formatBytes(total),
                     StringUtils.formatBytes(used),
                     StringUtils.formatBytes(free),
+                    StringUtils.formatBytes(total),
                     StringUtils.formatBytes(runtime.maxMemory()),
                     Thread.activeCount(),
                     customBisqThreads,
                     jvmThreads);
         } else {
             log.info("\n************************************************************************************************************************\n" +
-                            "Total memory: {}; Used memory: {}; Free memory: {}; Max memory: {}; No. of threads: {}\n" +
+                            "Used memory: {}; Free memory: {}; Total memory: {}; Max memory: {}; No. of threads: {}\n" +
                             "************************************************************************************************************************",
-                    StringUtils.formatBytes(total),
                     StringUtils.formatBytes(used),
                     StringUtils.formatBytes(free),
+                    StringUtils.formatBytes(total),
                     StringUtils.formatBytes(runtime.maxMemory()),
                     Thread.activeCount());
         }
@@ -191,5 +263,26 @@ public class JvmMemoryReportService implements MemoryReportService {
     @Override
     public long getTotalMemoryInMB() {
         return Runtime.getRuntime().totalMemory() / 1024 / 1024;
+    }
+
+    @Override
+    public ReadOnlyObservableMap<String, ObservableHashMap<Long, AtomicInteger>> getHistoricalNumThreadsByThreadName() {
+        return historicalNumThreadsByThreadName;
+    }
+
+    @Override
+    public ReadOnlyObservable<Integer> getCurrentNumThreads() {
+        return currentNumThreads;
+    }
+
+    @Override
+    public ReadOnlyObservable<Integer> getPeakNumThreads() {
+        return peakNumThreads;
+    }
+
+    private static boolean isJvmThread(Thread thread) {
+        ThreadGroup threadGroup = thread.getThreadGroup();
+        String groupName = threadGroup != null ? threadGroup.getName() : "N/A";
+        return JVM_THREAD_NAMES.contains(thread.getName()) || JVM_GROUP_NAMES.contains(groupName);
     }
 }
